force-app/main/default/objects/PurchaseInvoice__c/PurchaseInvoice__c.object-meta.xml
<CustomObject>
    <label>대리점 매입원장</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Purchase Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>