force-app/main/default/objects/PurchaseInvoice__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Provider</label>
    <referenceTo>VendorPurchase__c</referenceTo>
    <relationshipLabel>Purchase Invoice</relationshipLabel>
    <relationshipName>PurchaseInvoice</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>