force-app/main/default/objects/PurchaseInvoice__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Purchase Invoice</relationshipLabel>
    <relationshipName>PurchaseInvoice</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>