force-app/main/default/objects/PurchaseInvoice__c/fields/ReturnLineItem__c.field-meta.xml
<CustomField>
    <fullName>ReturnLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return LineItem</label>
    <referenceTo>Return__c</referenceTo>
    <relationshipLabel>Purchase Invoice</relationshipLabel>
    <relationshipName>PurchaseInvoice</relationshipName>
    <type>Lookup</type>
</CustomField>