force-app/main/default/objects/PurchaseInvoice__c/fields/TaxPrice__c.field-meta.xml
<CustomField>
    <fullName>TaxPrice__c</fullName>
    <formula>NetPrice__c * TaxRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>