force-app/main/default/objects/PurchaseInvoice__c/fields/WarehouseInLineItem__c.field-meta.xml
<CustomField>
    <fullName>WarehouseInLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse In LineItem</label>
    <referenceTo>WarehouseInLineItem__c</referenceTo>
    <relationshipLabel>Purchase Invoice</relationshipLabel>
    <relationshipName>PurchaseInvoice</relationshipName>
    <type>Lookup</type>
</CustomField>